--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,27 @@
-# Compiled class file
-*.class
+#Build and execution files
+/Grupo06/build/
+/Grupo06/dist/
+/Grupo06/nbproject/private/
+/Grupo06/nbbuild/
+/Grupo06/nbdist/
+/Grupo06/nbactions.xml
+/Grupo06/nb-configuration.xml
+/Grupo06/.jar
 
-# Log file
-*.log
+#IDE configuration files
+/Grupo06/nb-gradle.xml
+/Grupo06/nb-configuration.xml
+/Grupo06/nb-configuration.json
+/Grupo06/nbactions.xml
 
-# BlueJ files
-*.ctxt
+#Backup and cache files
+/Grupo06/~
+/Grupo06/.bak
+/Grupo06/.idea/
+/Grupo06/.DS_Store
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+#Maven dependencies
+/Grupo06/target/
 
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-replay_pid*
+#Logs
+/Grupo06/.log
