--- a/Grupo06/pom.xml
+++ b/Grupo06/pom.xml
@@ -19,6 +19,7 @@
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
             <version>11.1.2</version>
+            <type>jar</type>
         </dependency>
 
         <dependency>
